RESOLVED FIXED142127
[EFL][GTK] Fix build break after r180790,180798
https://bugs.webkit.org/show_bug.cgi?id=142127
Summary [EFL][GTK] Fix build break after r180790,180798
Hunseop Jeong
Reported 2015-02-27 21:50:47 PST
CanvasPathMethods.cpp:(.text._ZN7WebCore17CanvasPathMethods7ellipseEfffffffbRi+0x306): undefined reference to `WebCore::Path::addEllipse(WebCore::FloatPoint, float, float, float, float, float, bool)' collect2: error: ld returned 1 exit status
Attachments
HotFix (1.40 KB, patch)
2015-02-27 22:26 PST, Hunseop Jeong
no flags
Patch (2.59 KB, patch)
2015-02-27 22:37 PST, Hunseop Jeong
no flags
Patch (2.54 KB, patch)
2015-02-27 22:41 PST, Hunseop Jeong
no flags
Hunseop Jeong
Comment 1 2015-02-27 21:54:24 PST
Need to implement the "addEllipse(FloatPoint, float radiusX, float radiusY, float rotation, float startAngle, float endAngle, bool anticlockwise);" in PathCairo.
Hunseop Jeong
Comment 2 2015-02-27 22:26:35 PST
Hunseop Jeong
Comment 3 2015-02-27 22:29:08 PST
After this patch, another build break occurred : Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/WebPage/WebFrame.cpp.o:WebFrame.cpp:function WebKit::WebFrame::jsWrapperForWorld(WebKit::InjectedBundleFileHandle*, WebKit::InjectedBundleScriptWorld*): error: undefined reference to 'WebKit::InjectedBundleFileHandle::coreFile()' collect2: error: ld returned 1 exit status
Gyuyoung Kim
Comment 4 2015-02-27 22:33:49 PST
(In reply to comment #3) > After this patch, another build break occurred : > > Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/WebPage/WebFrame.cpp.o: > WebFrame.cpp:function > WebKit::WebFrame::jsWrapperForWorld(WebKit::InjectedBundleFileHandle*, > WebKit::InjectedBundleScriptWorld*): error: undefined reference to > 'WebKit::InjectedBundleFileHandle::coreFile()' > collect2: error: ld returned 1 exit status Please fix it as well.
Hunseop Jeong
Comment 5 2015-02-27 22:37:41 PST
Gyuyoung Kim
Comment 6 2015-02-27 22:39:35 PST
Comment on attachment 247591 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=247591&action=review > Source/WebCore/platform/graphics/cairo/PathCairo.cpp:289 > + // FIXME: Need to implement the Path::addEllipse(). Looks like a redundant comment. "notImplement()" is enough.
Hunseop Jeong
Comment 7 2015-02-27 22:41:46 PST
Csaba Osztrogonác
Comment 8 2015-02-27 23:26:24 PST
Comment on attachment 247592 [details] Patch Clearing flags on attachment: 247592 Committed r180817: <http://trac.webkit.org/changeset/180817>
Csaba Osztrogonác
Comment 9 2015-02-27 23:26:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.