Source/WebCore: [EFL][GTK] Fix build break after r180790,180798 https://bugs.webkit.org/show_bug.cgi?id=142127

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-02-27
Reviewed by Gyuyoung Kim.

* platform/graphics/cairo/PathCairo.cpp:
(WebCore::Path::addEllipse):

Source/WebKit2:
[EFL][GTK] Fix build break after r180790,180798
https://bugs.webkit.org/show_bug.cgi?id=142127

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-02-27
Reviewed by Gyuyoung Kim.

* CMakeLists.txt:

Canonical link: https://commits.webkit.org/160182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180817 268f45cc-cd09-0410-ab3c-d52691b4dbfc